ジャンプ台実装

--- a/runner/Resources/images/sprites/block.plist
+++ b/runner/Resources/images/sprites/block.plist
@@ -7,7 +7,7 @@
             <key>block101.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{659,3},{60,60}}</string>
+                <string>{{723,3},{60,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -33,7 +33,7 @@
             <key>block103.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{475,3},{180,60}}</string>
+                <string>{{539,3},{180,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -59,7 +59,7 @@
             <key>block105.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{623,255},{60,300}}</string>
+                <string>{{319,255},{60,300}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -111,7 +111,7 @@
             <key>block109.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{319,255},{300,300}}</string>
+                <string>{{383,255},{300,300}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -121,10 +121,23 @@
                 <key>sourceSize</key>
                 <string>{300,300}</string>
             </dict>
+            <key>block110.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,3},{60,30}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,30}}</string>
+                <key>sourceSize</key>
+                <string>{60,30}</string>
+            </dict>
             <key>block201.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,3},{128,60}}</string>
+                <string>{{67,3},{128,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -137,7 +150,7 @@
             <key>block202.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{135,3},{144,60}}</string>
+                <string>{{199,3},{144,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -163,7 +176,7 @@
             <key>block302.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{283,3},{60,60}}</string>
+                <string>{{411,3},{60,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -176,7 +189,7 @@
             <key>block303.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{191,255},{60,300}}</string>
+                <string>{{255,255},{60,300}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -189,7 +202,7 @@
             <key>block304.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{255,255},{60,300}}</string>
+                <string>{{191,255},{60,300}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -202,7 +215,7 @@
             <key>block401.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{411,3},{60,60}}</string>
+                <string>{{475,3},{60,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -222,7 +235,7 @@
             <key>size</key>
             <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:8e38a4a532f3b9db188fe270526f4cd3$</string>
+            <string>$TexturePacker:SmartUpdate:b1d1eff11cf467f70564b03d0303e44f$</string>
             <key>textureFileName</key>
             <string>block.png</string>
         </dict>
