--- a/runner/Resources/images/sprites/gameparts.plist
+++ b/runner/Resources/images/sprites/gameparts.plist
@@ -202,15 +202,28 @@
             <key>trampoline1_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{373,107},{56,35}}</string>
+                <string>{{373,107},{90,28}}</string>
+                <key>offset</key>
+                <string>{0,-16}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,32},{90,28}}</string>
+                <key>sourceSize</key>
+                <string>{90,60}</string>
+            </dict>
+            <key>trampoline1_2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{467,107},{90,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{56,35}}</string>
+                <string>{{0,0},{90,60}}</string>
                 <key>sourceSize</key>
-                <string>{56,35}</string>
+                <string>{90,60}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -222,7 +235,7 @@
             <key>size</key>
             <string>{1024,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:6b6788a30c64534a6cc929a49b0efa7c$</string>
+            <string>$TexturePacker:SmartUpdate:959672ea86852a6d1672748d5ac17682$</string>
             <key>textureFileName</key>
             <string>gameparts.png</string>
         </dict>
