--- a/runner/Resources/images/sprites/gameparts.plist
+++ b/runner/Resources/images/sprites/gameparts.plist
@@ -147,10 +147,23 @@
                 <key>sourceSize</key>
                 <string>{80,80}</string>
             </dict>
+            <key>rail1_1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{171,107},{320,9}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{320,9}}</string>
+                <key>sourceSize</key>
+                <string>{320,9}</string>
+            </dict>
             <key>switch101_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{171,107},{46,60}}</string>
+                <string>{{495,107},{46,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -163,7 +176,7 @@
             <key>switch101_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{221,107},{20,60}}</string>
+                <string>{{545,107},{20,60}}</string>
                 <key>offset</key>
                 <string>{13,0}</string>
                 <key>rotated</key>
@@ -176,7 +189,7 @@
             <key>switch102_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{245,107},{60,46}}</string>
+                <string>{{569,107},{60,46}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -189,7 +202,7 @@
             <key>switch102_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{309,107},{60,20}}</string>
+                <string>{{633,107},{60,20}}</string>
                 <key>offset</key>
                 <string>{0,13}</string>
                 <key>rotated</key>
@@ -202,28 +215,28 @@
             <key>trampoline1_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{373,107},{90,28}}</string>
+                <string>{{697,107},{106,28}}</string>
                 <key>offset</key>
-                <string>{0,-16}</string>
+                <string>{1,-16}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,32},{90,28}}</string>
+                <string>{{8,32},{106,28}}</string>
                 <key>sourceSize</key>
-                <string>{90,60}</string>
+                <string>{120,60}</string>
             </dict>
             <key>trampoline1_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{467,107},{90,60}}</string>
+                <string>{{807,107},{114,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{90,60}}</string>
+                <string>{{3,0},{114,60}}</string>
                 <key>sourceSize</key>
-                <string>{90,60}</string>
+                <string>{120,60}</string>
             </dict>
         </dict>
         <key>metadata</key>
@@ -235,7 +248,7 @@
             <key>size</key>
             <string>{1024,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:959672ea86852a6d1672748d5ac17682$</string>
+            <string>$TexturePacker:SmartUpdate:9d1b27f052e9af67ebeb5506200afbe6$</string>
             <key>textureFileName</key>
             <string>gameparts.png</string>
         </dict>
