--- a/runner/Resources/images/sprites/gameparts.plist
+++ b/runner/Resources/images/sprites/gameparts.plist
@@ -150,20 +150,33 @@
             <key>rail1_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{171,107},{320,9}}</string>
+                <string>{{171,107},{640,18}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{320,9}}</string>
+                <string>{{0,0},{640,18}}</string>
                 <key>sourceSize</key>
-                <string>{320,9}</string>
+                <string>{640,18}</string>
+            </dict>
+            <key>rail2_1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,191},{320,18}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{320,18}}</string>
+                <key>sourceSize</key>
+                <string>{320,18}</string>
             </dict>
             <key>switch101_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{495,107},{46,60}}</string>
+                <string>{{327,191},{46,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -176,7 +189,7 @@
             <key>switch101_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{545,107},{20,60}}</string>
+                <string>{{377,191},{20,60}}</string>
                 <key>offset</key>
                 <string>{13,0}</string>
                 <key>rotated</key>
@@ -189,7 +202,7 @@
             <key>switch102_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{569,107},{60,46}}</string>
+                <string>{{401,191},{60,46}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -202,7 +215,7 @@
             <key>switch102_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{633,107},{60,20}}</string>
+                <string>{{465,191},{60,20}}</string>
                 <key>offset</key>
                 <string>{0,13}</string>
                 <key>rotated</key>
@@ -215,7 +228,7 @@
             <key>trampoline1_1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{697,107},{106,28}}</string>
+                <string>{{529,191},{106,28}}</string>
                 <key>offset</key>
                 <string>{1,-16}</string>
                 <key>rotated</key>
@@ -228,7 +241,7 @@
             <key>trampoline1_2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{807,107},{114,60}}</string>
+                <string>{{639,191},{114,60}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -248,7 +261,7 @@
             <key>size</key>
             <string>{1024,256}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:9d1b27f052e9af67ebeb5506200afbe6$</string>
+            <string>$TexturePacker:SmartUpdate:2d65d6fc0d2eab4aaaa03df10255981b$</string>
             <key>textureFileName</key>
             <string>gameparts.png</string>
         </dict>
