--- a/runner/Resources/images/sprites/home.plist
+++ b/runner/Resources/images/sprites/home.plist
@@ -17,36 +17,49 @@
                 <key>sourceSize</key>
                 <string>{144,124}</string>
             </dict>
-            <key>player_base_middle.png</key>
+            <key>levelup_counter.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{151,3},{510,250}}</string>
+                <string>{{151,3},{224,119}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{510,250}}</string>
+                <string>{{0,0},{224,119}}</string>
                 <key>sourceSize</key>
-                <string>{510,250}</string>
+                <string>{224,119}</string>
+            </dict>
+            <key>player_base_middle.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{379,3},{510,230}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{510,230}}</string>
+                <key>sourceSize</key>
+                <string>{510,230}</string>
             </dict>
             <key>player_base_small.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,257},{510,70}}</string>
+                <string>{{3,237},{310,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{510,70}}</string>
+                <string>{{0,0},{310,70}}</string>
                 <key>sourceSize</key>
-                <string>{510,70}</string>
+                <string>{310,70}</string>
             </dict>
             <key>popup_command.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{517,257},{230,90}}</string>
+                <string>{{317,237},{230,90}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -59,20 +72,20 @@
             <key>popup_large.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,351},{520,760}}</string>
+                <string>{{3,331},{520,700}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{520,760}}</string>
+                <string>{{0,0},{520,700}}</string>
                 <key>sourceSize</key>
-                <string>{520,760}</string>
+                <string>{520,700}</string>
             </dict>
             <key>popup_square_large.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,1115},{550,550}}</string>
+                <string>{{3,1035},{550,550}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,7 +98,7 @@
             <key>popup_square_small.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{557,1115},{110,110}}</string>
+                <string>{{557,1035},{110,110}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -98,7 +111,7 @@
             <key>talk_base.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,1669},{550,260}}</string>
+                <string>{{3,1589},{550,260}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -118,7 +131,7 @@
             <key>size</key>
             <string>{1024,2048}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:561ee8759867af0afd1285ed4cff4b96$</string>
+            <string>$TexturePacker:SmartUpdate:944e533728981c7fad5e6ec7d9a6635e$</string>
             <key>textureFileName</key>
             <string>home.png</string>
         </dict>
