--- a/runner/Resources/images/sprites/towner.plist
+++ b/runner/Resources/images/sprites/towner.plist
@@ -4,7 +4,7 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>carpenter1_bottom1.png</key>
+            <key>towner1_bottom1.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{3,3},{68,90}}</string>
@@ -17,7 +17,7 @@
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
-            <key>carpenter1_bottom2.png</key>
+            <key>towner1_bottom2.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{75,3},{68,90}}</string>
@@ -30,7 +30,7 @@
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
-            <key>carpenter1_left1.png</key>
+            <key>towner1_left1.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{147,3},{68,90}}</string>
@@ -43,7 +43,7 @@
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
-            <key>carpenter1_left2.png</key>
+            <key>towner1_left2.png</key>
             <dict>
                 <key>frame</key>
                 <string>{{3,97},{68,88}}</string>
@@ -56,94 +56,55 @@
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
-            <key>carpenter1_right1.png</key>
+            <key>towner2_bottom1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{75,97},{68,90}}</string>
+                <string>{{75,97},{78,90}}</string>
                 <key>offset</key>
-                <string>{0,0}</string>
+                <string>{1,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{11,0},{68,90}}</string>
+                <string>{{7,0},{78,90}}</string>
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
-            <key>carpenter1_right2.png</key>
+            <key>towner2_bottom2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{147,97},{68,88}}</string>
+                <string>{{157,97},{78,88}}</string>
+                <key>offset</key>
+                <string>{-2,-1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{4,2},{78,88}}</string>
+                <key>sourceSize</key>
+                <string>{90,90}</string>
+            </dict>
+            <key>towner3_left1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,191},{70,86}}</string>
                 <key>offset</key>
                 <string>{0,1}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{11,0},{68,88}}</string>
+                <string>{{10,1},{70,86}}</string>
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
-            <key>carpenter1_top1.png</key>
+            <key>towner3_left2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,191},{72,88}}</string>
-                <key>offset</key>
-                <string>{1,1}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{10,0},{72,88}}</string>
-                <key>sourceSize</key>
-                <string>{90,90}</string>
-            </dict>
-            <key>carpenter1_top2.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{79,191},{74,88}}</string>
-                <key>offset</key>
-                <string>{2,1}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{10,0},{74,88}}</string>
-                <key>sourceSize</key>
-                <string>{90,90}</string>
-            </dict>
-            <key>carpenter1_win1.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{157,191},{74,90}}</string>
+                <string>{{77,191},{70,88}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{8,0},{74,90}}</string>
-                <key>sourceSize</key>
-                <string>{90,90}</string>
-            </dict>
-            <key>carpenter1_win2.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{3,285},{68,90}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{11,0},{68,90}}</string>
-                <key>sourceSize</key>
-                <string>{90,90}</string>
-            </dict>
-            <key>carpenter1_win3.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{75,285},{90,90}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{90,90}}</string>
+                <string>{{10,1},{70,88}}</string>
                 <key>sourceSize</key>
                 <string>{90,90}</string>
             </dict>
@@ -157,7 +118,7 @@
             <key>size</key>
             <string>{256,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:7cc7c0238abd55f2690e52fa21e3cbaa$</string>
+            <string>$TexturePacker:SmartUpdate:f769190e871dc3111156e0b95aecba2b$</string>
             <key>textureFileName</key>
             <string>towner.png</string>
         </dict>
