--- a/runner/Resources/images/sprites/gameparts.plist
+++ b/runner/Resources/images/sprites/gameparts.plist
@@ -186,29 +186,29 @@
                 <key>sourceSize</key>
                 <string>{100,100}</string>
             </dict>
-            <key>item_base.png</key>
+            <key>item1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,107},{100,100}}</string>
-                <key>offset</key>
-                <string>{0,0}</string>
-                <key>rotated</key>
-                <false/>
-                <key>sourceColorRect</key>
-                <string>{{0,0},{100,100}}</string>
-                <key>sourceSize</key>
-                <string>{100,100}</string>
-            </dict>
-            <key>item_magnet.png</key>
-            <dict>
-                <key>frame</key>
-                <string>{{107,107},{84,74}}</string>
+                <string>{{3,107},{84,74}}</string>
                 <key>offset</key>
                 <string>{-3,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
                 <string>{{5,13},{84,74}}</string>
+                <key>sourceSize</key>
+                <string>{100,100}</string>
+            </dict>
+            <key>item_base.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{91,107},{100,100}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{100,100}}</string>
                 <key>sourceSize</key>
                 <string>{100,100}</string>
             </dict>
@@ -378,7 +378,7 @@
             <key>size</key>
             <string>{2048,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:24c2ec36ad68fb7983f1b517dd3bd006$</string>
+            <string>$TexturePacker:SmartUpdate:4863501ceae21c14f9e97b87450d023d$</string>
             <key>textureFileName</key>
             <string>gameparts.png</string>
         </dict>
