--- a/runner/Resources/images/sprites/land.plist
+++ b/runner/Resources/images/sprites/land.plist
@@ -4,23 +4,23 @@
     <dict>
         <key>frames</key>
         <dict>
-            <key>block1280.png</key>
+            <key>block120.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,3},{1280,120}}</string>
+                <string>{{3,3},{120,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
                 <false/>
                 <key>sourceColorRect</key>
-                <string>{{0,0},{1280,120}}</string>
+                <string>{{0,0},{120,120}}</string>
                 <key>sourceSize</key>
-                <string>{1280,120}</string>
+                <string>{120,120}</string>
             </dict>
             <key>block1440.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{1287,3},{1440,120}}</string>
+                <string>{{127,3},{1440,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -30,10 +30,36 @@
                 <key>sourceSize</key>
                 <string>{1440,120}</string>
             </dict>
+            <key>block1560.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{1571,3},{1560,120}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{1560,120}}</string>
+                <key>sourceSize</key>
+                <string>{1560,120}</string>
+            </dict>
+            <key>block1800.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,127},{1800,120}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{1800,120}}</string>
+                <key>sourceSize</key>
+                <string>{1800,120}</string>
+            </dict>
             <key>block240.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2731,3},{240,120}}</string>
+                <string>{{1807,127},{240,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +72,7 @@
             <key>block2560.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,127},{2560,120}}</string>
+                <string>{{3,251},{2560,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -59,7 +85,7 @@
             <key>block360.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2567,127},{360,120}}</string>
+                <string>{{2567,251},{360,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -69,6 +95,45 @@
                 <key>sourceSize</key>
                 <string>{360,120}</string>
             </dict>
+            <key>block480.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2931,251},{480,120}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{480,120}}</string>
+                <key>sourceSize</key>
+                <string>{480,120}</string>
+            </dict>
+            <key>block720.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,375},{1280,120}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{1280,120}}</string>
+                <key>sourceSize</key>
+                <string>{1280,120}</string>
+            </dict>
+            <key>block960.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{1287,375},{960,120}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{960,120}}</string>
+                <key>sourceSize</key>
+                <string>{960,120}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -77,9 +142,9 @@
             <key>realTextureFileName</key>
             <string>land.png</string>
             <key>size</key>
-            <string>{4096,256}</string>
+            <string>{4096,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:e951ef3c7ea6f10c213b1d4cbae890a7$</string>
+            <string>$TexturePacker:SmartUpdate:fffd17dc6e5ee6a0409603c1645b3d49$</string>
             <key>textureFileName</key>
             <string>land.png</string>
         </dict>
