--- a/runner/Resources/images/sprites/block.plist
+++ b/runner/Resources/images/sprites/block.plist
@@ -134,10 +134,36 @@
                 <key>sourceSize</key>
                 <string>{600,60}</string>
             </dict>
+            <key>block203.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{607,259},{60,180}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,180}}</string>
+                <key>sourceSize</key>
+                <string>{60,180}</string>
+            </dict>
+            <key>block205.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{671,259},{60,300}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,300}}</string>
+                <key>sourceSize</key>
+                <string>{60,300}</string>
+            </dict>
             <key>block301.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{607,259},{120,120}}</string>
+                <string>{{735,259},{120,120}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -147,6 +173,84 @@
                 <key>sourceSize</key>
                 <string>{120,120}</string>
             </dict>
+            <key>block401.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{859,259},{60,60}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,60}}</string>
+                <key>sourceSize</key>
+                <string>{60,60}</string>
+            </dict>
+            <key>block402.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{923,259},{60,60}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,60}}</string>
+                <key>sourceSize</key>
+                <string>{60,60}</string>
+            </dict>
+            <key>block501.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{3,563},{60,60}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,60}}</string>
+                <key>sourceSize</key>
+                <string>{60,60}</string>
+            </dict>
+            <key>block502.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{67,563},{60,60}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,60}}</string>
+                <key>sourceSize</key>
+                <string>{60,60}</string>
+            </dict>
+            <key>block503.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{131,563},{60,300}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,300}}</string>
+                <key>sourceSize</key>
+                <string>{60,300}</string>
+            </dict>
+            <key>block504.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{195,563},{60,300}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,300}}</string>
+                <key>sourceSize</key>
+                <string>{60,300}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -155,9 +259,9 @@
             <key>realTextureFileName</key>
             <string>block.png</string>
             <key>size</key>
-            <string>{1024,512}</string>
+            <string>{1024,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:5de360d8bcfdd55b7e56db9dc0158a63$</string>
+            <string>$TexturePacker:SmartUpdate:9b6c2a1ebb6b04fc0abad881c319fd93$</string>
             <key>textureFileName</key>
             <string>block.png</string>
         </dict>
